<resources>
    <string name="app_name">home_meic</string>
    <string name="logo_name">Home MEIC</string>
    <string name="slogan_name">Un hogar para un futuro mejor</string>


    <!--Categorias-->
    <string name="muebles">Muebles</string>
    <string name="electrodomesticos">Electrodomésticos</string>
    <string name="video">Video</string>
    <string name="audio_y_video">Audio y Video</string>
    <string name="tecnologia">Tecnología</string>
    <string name="expandir_todo">Comprar</string>


    <!--Descrpciones-->
    <string name="productos_destacados">Productos destacados</string>
    <string name="descripcion_de_productos_destacados">Descripción de productos</string>
    <string name="articulos_mas_vendidos">Articulos de video</string>
    <string name="categorias">Productos</string>
    <string name="ver_todo">Ver todo</string>
    <string name="ofertas">___________</string>
    <string name="buscar_articulo">Buscar</string>


    <!--Barra de navegación-->
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="nosotros">Sobre Nosotros</string>

    <!--Perfil-->
    <string name="Login">Login</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesión">Cerrar Sesión</string>

    <!--Compartir-->
    <string name="compartir">Compartir</string>
    <string name="calificanos">Calificanos</string>
    <string name="title_activity_panel_inicio">Panel_Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu_principal">Menu_principal</string>
    <string name="abrir_navegador">Abrir cajón de navegación</string>
    <string name="cerrar_navegador">Cerrar cajón de navegación</string>
    <string name="title_activity_menu_cliente">Menu_Cliente</string>
</resources>