<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_inicio"
            android:title="@string/inicio"
            android:icon="@drawable/otro_menu_icono"/>
        <item
            android:id="@+id/nav_buscar"
            android:title="@string/buscar"
            android:icon="@drawable/buscar_icono"/>
        <item

            android:id="@+id/nav_todas_las_categorias"
            android:title="@string/categorias"
            android:icon="@drawable/categorias_icono"/>

        <item
            android:id="@+id/nav_sobre_nosotros"
            android:title="@string/nosotros"
            android:icon="@drawable/nosotros_icono"/>




    </group>

    <item android:title="Categorias">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_muebles"
                    android:title="@string/muebles"
                    android:icon="@drawable/muebles_icono"/>
                <item
                    android:id="@+id/nav_electrodomesticos"
                    android:title="@string/electrodomesticos"
                    android:icon="@drawable/electrodomesticos_icono"/>

                <item
                    android:id="@+id/nav_audio"
                    android:title="@string/audio_y_video"
                    android:icon="@drawable/sonido_icono"/>
                <item
                    android:id="@+id/nav_tecnologia"
                    android:title="@string/tecnologia"
                    android:icon="@drawable/tecnologia_icono"/>

            </group>

        </menu>




    </item>

    <item android:title="Perfil">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/Login"
                    android:icon="@drawable/abrir_icono"/>
                <item
                    android:id="@+id/perfil"
                    android:title="@string/perfil"
                    android:icon="@drawable/perfil_icono"/>
                <item
                    android:id="@+id/nav_cerrar_sesion"
                    android:title="@string/cerrar_sesión"
                    android:icon="@drawable/cerrar_icono"/>





            </group>

        </menu>




    </item>

    <item android:title="Compartir">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_compartir"
                    android:title="@string/compartir"
                    android:icon="@drawable/compartir_icono"/>
                <item
                    android:id="@+id/nav_calificanos"
                    android:title="@string/calificanos"
                    android:icon="@drawable/valorar_icono"/>

            </group>

        </menu>




    </item>



</menu>