<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelDeInicio"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/vista_navegacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightWhite"
        android:theme="@style/navigationTeme"
        android:layout_gravity="start"
        app:headerLayout="@layout/encabezado_del_menu"
        app:menu="@menu/main_menu"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/home_background">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icono"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/menu_icono"
                android:layout_centerVertical="true"
                android:padding="5dp"/>





            <LinearLayout
                android:id="@+id/carrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:elevation="8dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/carrito_logo"
                        android:layout_centerInParent="true"/>

                    <Button
                        android:id="@+id/btn_carrito"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="#00000000"/>

                </RelativeLayout>


            </LinearLayout>




        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="logo_texto2"
                android:text="@string/logo_name"
                android:textSize="25sp"
                android:fontFamily="@font/fredoka_one"
                android:layout_centerHorizontal="true"/>



        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/categorias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_5"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/categorias_icono"
                                android:layout_centerInParent="true"/>

                            <Button
                                android:id="@+id/btn_categorias"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="#00000000"/>

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/categoria1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/categorias"
                            android:gravity="center_horizontal" />

                    </LinearLayout>


                </LinearLayout>













                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/electrodomesticos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/electrodomesticos_icono"
                                android:layout_centerInParent="true"/>

                            <Button
                                android:id="@+id/btn_electrodomesticos"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="#00000000"/>

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/texto_electrodomesticos"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/electrodomesticos"
                            android:gravity="center_horizontal" />






                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_3"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/muebles_icono" />

                            <Button
                                android:id="@+id/btn_mubles"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="#00000000"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/muebles"
                            android:gravity="center_horizontal" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_4"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/sonido_icono"
                                android:layout_centerInParent="true"/>

                            <Button
                                android:id="@+id/btn_audio"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="#00000000"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/audio_y_video"
                            android:gravity="center_horizontal" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_6"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/tecnologia_icono"
                                android:layout_centerInParent="true"/>

                            <Button
                                android:id="@+id/btn_tecnologia"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="#00000000"/>

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/tecnologia"
                            android:gravity="center_horizontal" />


                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_nombre2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionName="iniciar_logo3"
                        android:text="@string/productos_destacados"
                        android:textSize="25sp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/fredoka_one"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/banner_background_light">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="0dp"
                        android:layout_height="280dp"
                        android:background="@color/banner_background"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_toRightOf="@id/featured_background"
                        android:background="@color/home_background" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_nombre3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:transitionName="iniciar_logo3"
                        android:text="@string/ofertas"
                        android:textSize="25sp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/fredoka_one"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/banner_background_light">

                    <LinearLayout
                        android:id="@+id/featured_background1"
                        android:layout_width="0dp"
                        android:layout_height="280dp"
                        android:background="@color/banner_background"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categorias_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:layout_marginVertical="20dp"
                        android:layout_toRightOf="@id/featured_background1"
                        android:background="@color/lightWhite" />


                </RelativeLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>